admin/assets/css/edituser.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: Readex_Pro;
}

@font-face {
    font-family: Readex_Pro;
    src: url('../fonts/font-families/Readex_Pro/ReadexPro-Regular.ttf');
  }

/* Header */
header {
    display: flex;
    align-items: center;
    background-color: white;
    padding: 0.2vw;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

header h1 {
    display: flex;
    align-items: center;
    margin-left: 1.2vw;
    font-size: 1.4vw;
}

header span {
    margin-left: 0.3vw;
}

header img.slu-logo {
    height: 50px;
    width: auto;
    margin-right: 10px;
}

.header-separator {
    background-color: #003DA5;
    padding-bottom: 2vw;
    width: 100%;
    margin-top: -1vh;
    margin-bottom: 0.5vh;
}

/* Sidebar */
.sidebar-container {
    background: rgba(244, 244, 244, 1);
    border-right: 1px solid #e5e5e5;
    position: fixed;
    top: 0;
    bottom: 0;
    height: 100%;
    width: 250px; 
    margin-top: 9.6vh;
    overflow: hidden;
    display: flex;
    flex-direction: column;
    z-index: 1000; 
}
.sidebar-container:hover {
    width: 250px;
}

.sidebar-menu {
    flex: 1;
    display: flex;
    flex-direction: column;
}

.sidebar-menu ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
    flex-grow: 1;
}

.sidebar-menu li {
    display: block;
}

.sidebar-menu li a {
    display: flex;
    align-items: center;
    padding: 10px;
    color: #999;
    text-decoration: none;
    transition: background-color 0.2s ease, color 0.2s ease;
}

.sidebar-menu li a .menu-item-text {
    flex: 1;
    font-size: 1.9vh;
    color: #000;
}

.sidebar-icon {
    width: 30px;
    height: 30px;
    margin-right: 20px;
    margin-left: 5px;
}

.sidebar-menu li:hover a {
    color: #fff;
    background-color: rgba(0, 61, 165, 0.4);
}

.sidebar-logout {
    position: absolute;
    bottom: 15vh;
    width: 100%;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    padding: 10px;
}

.sidebar-logout a {
    display: flex;
    align-items: center;
    text-decoration: none;
    width: 100%;
    padding: 10px;
    transition: background-color 0.2s ease, color 0.2s ease;
}

.sidebar-logout a:hover {
    background-color: rgba(255, 178, 0, 1);
}

.menu-item-logout {
    color: black;
    font-size: 1.9vh;
    flex: 1;
    font-weight: bold;
}

/* Main Content */
.main-content {
    margin-left: 250px; 
    padding: 20px;
    transition: margin-left 0.3s ease;
    z-index: 1; 
    position: relative; 
}

.sidebar-container:hover ~ .main-content {
    margin-left: 250px; 
}

.form-container {
    background-color: #fff;
    padding: 20px;
    border-radius: 10px;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
}

h2.form-title, h3.section-title {
    color: #003DA5;
    margin-bottom: 20px;
    margin-top: 10px;
}

.form-group {
    display: flex;
    flex-direction: column;
    margin-bottom: 4px; 
    flex: 1;
    margin-right: 0px; 
}

.form-group label {
    margin-bottom: 2px; 
    font-weight: bold;
    color: #333;
    margin-top: 10px;
}

/* General input and select styling */
.form-group input, .form-group select {
    padding: 8px; 
    border: 1px solid #ccc;
    border-radius: 5px;
    font-size: 16px;
    margin-bottom: 10px;
}

.form-row {
    display: flex;
    justify-content: space-between;
    gap: 10px; 
    flex-wrap: wrap; 
}

.form-group#first-name input {
    width: 50%; 
}

.form-group#last-name input {
    width: 50%; 
    margin-left: -90px;
}

.form-group#last-name label {
    margin-left: -90px;
}

.form-group#email input  {
    width: 15%; 
}

.form-group#email label  {
    width: 15%; 
    margin-top: -60px;
}

.form-group#school-id input {
    width: 55%; 
}

.form-group#graduation-year input {
    width: 55%; 
    margin-left: -90px;
}

.form-group#graduation-year label {
    width: 55%; 
    margin-left: -90px;
}

.form-group#school select {
    width: 110%; 
    margin-left: -185px;
}

.form-group#school label {
    width: 60%; 
    margin-left: -185px;
}

.form-group#program select {
    width: 110%; 
    margin-left: -185px;
}

.form-group#program label {
    width: 60%; 
    margin-left: -185px;
}

.form-group#current-occupation select {
    width: 50%; 
    margin-left: -90px;
}

.form-group#current-occupation label {
    width: 50%; 
    margin-left: -90px;
}

.form-group#user-roles select {
    width: 25%; 
    margin-left: -90px;
}

.form-group#user-roles label {
    width: 25%; 
    margin-left: -90px;
}

/* Upload Photo */
.upload-photo-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: -20px;
    margin-bottom: 10px;
    margin-right: 165px;
}

.upload-photo {
    height: 180px;
    width: 180px;
    border-radius: 50%;
    background-color: #ddd;
    border: 2px solid #1457cc;
    margin-bottom: 5px;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
}

.upload-photo img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 50%;
}  

.upload-photo-container label {
    cursor: pointer;
    text-align: center;
    font-size: 14px;
    color: #1457cc;
    font-weight: bold;
}

#upload-photo {
    display: none;
}

/* Action buttons */
.form-actions {
    display: flex;
    justify-content: flex-end;
}

.clear-button, .save-button {
    padding: 8px 18px; 
    border: none;
    border-radius: 5px;
    font-size: 15px; 
    cursor: pointer;
    margin-top: 65px; 
    margin-right: 35px; 
}


.clear-button {
    background-color: #003DA5;
    color: #fff;
    margin-right: 10px;
    font-weight: bold;
    width: 5%;
}

.clear-button:hover {
    background-color: #0053A1;
}

.save-button {
    background-color: #FFB200;
    color: #fff;
    font-weight: bold;
    width: 5%;
}

.save-button:hover {
    background-color: #f3b146;
}

.modal {
    display: none; 
    position: fixed; 
    z-index: 1; 
    left: 0; 
    top: 0; 
    width: 100%; 
    height: 100%; 
    overflow: auto; 
    background-color: rgba(0, 0, 0, 0.4); 
  }
  
  .modal-content {
    width: 320px; 
    max-width: 90%; 
    position: absolute; 
    top: 50%; 
    left: 50%; 
    transform: translate(-50%, -50%); 
    flex-direction: column; 
    align-items: center; 
    background-color: #fff; 
    color: #000; 
    text-align: center; 
    border-radius: 20px; 
    padding: 30px 30px 70px; 
  }
  
  .modal img {
    width: 82px;
    margin-bottom: 15px;
  }
  .modal p {
    margin-bottom: 40px;
    font-size: 18px;
  }

  button.accept {
    background-color: #0049b1;
    border: none;
    border-radius: 5px;
    width: 200px;
    padding: 14px;
    font-size: 16px;
    color: #FFB200;
    box-shadow: 0px 6px 18px -5px rgb(8, 7, 7);
  }
 

